--- a/src/main/webapp/views/layout/app.jade
+++ b/src/main/webapp/views/layout/app.jade
@@ -10,4 +10,6 @@ html
     include top
                 
     .container.main-container
-      block content 
+      block content
+
+    include footer
