--- a/src/main/webapp/views/layout/head.jade
+++ b/src/main/webapp/views/layout/head.jade
@@ -11,4 +11,4 @@ link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/font-awesome/4
 link(rel="stylesheet", type='text/css', href="#{basePath}/resources/css/theme.css")
 
 script(src="#{basePath}/webjars/jquery/2.1.4/jquery.min.js")
-script(src="#{basePath}/webjars/bootstrap/3.3.5/js/bootstrap.min.js")
+// script(src="#{basePath}/webjars/bootstrap/3.3.5/js/bootstrap.min.js")
