--- a/src/main/webapp/views/layout/footer.jade
+++ b/src/main/webapp/views/layout/footer.jade
@@ -1,6 +1,7 @@
 .container
   .footer
-    hr
-    p Copyright &copy; · 2015 Raysmond · All Right Reserved.
-    p Page: #{viewHelper.getResponseTime()}ms
+    .footer-wrapper
+      hr
+      p Copyright &copy; · 2015 Raysmond · All Right Reserved.
+      p Page: #{viewHelper.getResponseTime()}ms
        
