--- a/src/main/webapp/views/layout/head.jade
+++ b/src/main/webapp/views/layout/head.jade
@@ -8,6 +8,7 @@ title SringBlog
 
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/font-awesome/4.3.0-3/css/font-awesome.min.css')
+link(rel="stylesheet", type='text/css', href="#{basePath}/resources/vendors/pygments/github.css")
 link(rel="stylesheet", type='text/css', href="#{basePath}/resources/css/theme.css")
 
 script(src="#{basePath}/webjars/jquery/2.1.4/jquery.min.js")
