--- a/src/main/webapp/views/layout/navbar.jade
+++ b/src/main/webapp/views/layout/navbar.jade
@@ -11,9 +11,9 @@ nav.navbar.navbar-bright
     .collapse.navbar-collapse#navbar
       ul.nav.navbar-nav
         li.active
-          a(href="/") Home
+          a(href="#{basePath}") Home
         li
-          a(href="/about") About
+          a(href="#{basePath}/about") About
       ul.nav.navbar-nav.navbar-right.navbar-user
         li.dropdown
           a.dropdown-toggle(data-toggle="dropdown") 
