--- a/src/main/webapp/views/admin/layout/navbar.jade
+++ b/src/main/webapp/views/admin/layout/navbar.jade
@@ -6,14 +6,14 @@ nav.navbar.navbar-fixed-top.navbar-bright
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href="/admin")
+      a.navbar-brand(href="#{basePath}/admin")
         span Sring Blog
     .collapse.navbar-collapse#navbar
       ul.nav.navbar-nav
         li.active
-          a(href="/admin/posts") Posts
+          a(href="#{basePath}/admin/posts") Posts
         li
-          a(href="/admin/settings") Setting
+          a(href="#{basePath}/admin/settings") Setting
       ul.nav.navbar-nav.navbar-right.navbar-user
         li.dropdown
           a.dropdown-toggle(data-toggle="dropdown") 
