--- a/src/main/webapp/views/home/about.jade
+++ b/src/main/webapp/views/home/about.jade
@@ -1,6 +1,10 @@
 extends ../layout/app 
 
+block page_title 
+  h1 Raysmond 
+  p Something about me.
+
 block content 
-  h1 About SringBlog
-  hr
-  p todo
+  .post 
+    .content 
+      !{about.getRenderedContent()}
