--- a/src/main/webapp/views/posts/show.jade
+++ b/src/main/webapp/views/posts/show.jade
@@ -1,9 +1,11 @@
 extends ../layout/app 
 
+block page_title
+  h1 #{post.getTitle()}
+  p #{post.getCreatedAt()}
+
 block content 
   .post
-    h1 #{post.getTitle()}
-    hr
     .content 
       !{post.getRenderedContent()}
     
