--- a/src/main/webapp/views/layout/head.jade
+++ b/src/main/webapp/views/layout/head.jade
@@ -4,7 +4,10 @@ meta(name="viewport", content="width=device-width, initial-scale=1")
 
 meta(name="description", content="A simple blog demo with Spring MVC.")
 meta(name="author", content="Raysmond")
-title SringBlog
+
+title 
+  block title 
+    |SringBlog
 
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/font-awesome/4.3.0-3/css/font-awesome.min.css')
