--- a/src/main/webapp/views/home/about.jade
+++ b/src/main/webapp/views/home/about.jade
@@ -4,6 +4,9 @@ block page_title
   h1 Raysmond 
   p Something about me.
 
+block title 
+  |About Raysmond
+
 block content 
   .post 
     .content 
