--- a/src/main/webapp/views/posts/show.jade
+++ b/src/main/webapp/views/posts/show.jade
@@ -1,8 +1,12 @@
 extends ../layout/app 
 
+block title 
+  = post.getTitle()
+  |  · Raysmond
+  
 block page_title
   h1 #{post.getTitle()}
-  p #{post.getCreatedAt()}
+  p #{viewHelper.getFormattedDate(post.getCreatedAt())}
 
 block content 
   .post
