--- a/src/main/webapp/views/home/index.jade
+++ b/src/main/webapp/views/home/index.jade
@@ -2,7 +2,7 @@ extends ../layout/app
 
 block page_title
   h1 Raysmond
-  p TO be or not to be.
+  p Do it now or never
 
 block title 
   |Raysmond
