--- a/src/main/webapp/views/layout/navbar.jade
+++ b/src/main/webapp/views/layout/navbar.jade
@@ -6,12 +6,10 @@ nav.navbar.navbar-bright
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      // a.navbar-brand(href="#")
-      //  span Sring Blog
     .collapse.navbar-collapse#navbar
       ul.nav.navbar-nav
         li.active
-          a(href="#{basePath}") Home
+          a(href="#{basePath}/") Home
         li
           a(href="#{basePath}/about") About
     
