--- a/src/main/webapp/views/admin/posts_edit.jade
+++ b/src/main/webapp/views/admin/posts_edit.jade
@@ -36,6 +36,8 @@ block content
       var MarkdownMode = ace.require("ace/mode/markdown").Mode;
       editor.getSession().setMode(new MarkdownMode());
       
+      editor.getSession().setUseWrapMode(true);
+      
       $("form").submit(function(){
           $("#content").val(editor.getValue());
           return true;
