--- a/src/main/webapp/views/layout/head.jade
+++ b/src/main/webapp/views/layout/head.jade
@@ -7,7 +7,7 @@ meta(name="author", content="Raysmond")
 
 title 
   block title 
-    |SringBlog
+    |Raysmond
 
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/font-awesome/4.3.0-3/css/font-awesome.min.css')
