--- a/src/main/webapp/views/users/signin.jade
+++ b/src/main/webapp/views/users/signin.jade
@@ -9,7 +9,7 @@ block content
       .login-panel
         form.signin-form(method="post",action="#{basePath}/authenticate")
           input(type="hidden", name='_csrf', value='#{_csrf.token}')
-          input.form-control(type="text",name="username",value="user@raysmond.com")
-          input.form-control(type="password",name="password",value="user")
+          input.form-control(type="text",name="username")
+          input.form-control(type="password",name="password")
           button.btn.btn-primary.btn-block(type="submit") Login
   
