--- a/src/main/webapp/views/layout/navbar.jade
+++ b/src/main/webapp/views/layout/navbar.jade
@@ -10,6 +10,6 @@ nav.navbar.navbar-bright
       ul.nav.navbar-nav
         li.active
           a(href="#{basePath}/") Home
-        li
-          a(href="#{basePath}/about") About
+        li: a(href="#{basePath}/posts/archive") Archive
+        li: a(href="#{basePath}/about") About
     
