--- a/src/main/webapp/views/posts/archive.jade
+++ b/src/main/webapp/views/posts/archive.jade
@@ -5,7 +5,7 @@ block page_title
   p Look back and find something interesting.
   
 block title
-  | Posts Archive · Raysmond
+  = viewHelper.metaTitle("Posts Archive")
 
 block content 
   .post 
