--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -28,3 +28,12 @@ td.operations a{
   height: 430px;
   width: 100%;
 }
+
+
+.settings-form tbody td.setting-label{
+	width: 250px;
+	text-align: right;
+	padding-right: 20px;
+	vertical-align: middle;
+	font-weight: bold;
+}
