--- a/src/main/webapp/views/layout/footer.jade
+++ b/src/main/webapp/views/layout/footer.jade
@@ -2,6 +2,7 @@
   .footer
     .footer-wrapper
       hr
-      p Copyright &copy; · 2015 Raysmond · All Right Reserved.
-      p Page: #{viewHelper.getResponseTime()}ms
+      p Copyright &copy; · 2015 #{App.getSiteName()} · All Right Reserved.
+      if viewHelper != null
+        p Page: #{viewHelper.getResponseTime()}ms
        
