--- a/src/main/webapp/views/layout/navbar.jade
+++ b/src/main/webapp/views/layout/navbar.jade
@@ -1,12 +1,7 @@
 nav.navbar.navbar-bright
   .container
     .navbar-header
-      button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#navbar", aria-expanded="false", aria-controls="navbar")
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-    .collapse.navbar-collapse#navbar
+    div#navbar
       ul.nav.navbar-nav
         li.active
           a(href="#{basePath}/") Home
