user profile management

--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -37,3 +37,9 @@ td.operations a{
 	vertical-align: middle;
 	font-weight: bold;
 }
+
+.profile .row .col-sm-2{
+		font-weight: bold;
+		text-align: right;
+		padding-right: 30px;
+}
