--- a/src/main/webapp/views/admin/layout/admin.jade
+++ b/src/main/webapp/views/admin/layout/admin.jade
@@ -6,6 +6,6 @@ html(lang="zh-CN")
     
   body
     include navbar 
-                
     .container.main-container
+      include message
       block content 
