--- a/src/main/webapp/views/admin/layout/navbar.jade
+++ b/src/main/webapp/views/admin/layout/navbar.jade
@@ -12,11 +12,10 @@ nav.navbar.navbar-fixed-top.navbar-bright
       ul.nav.navbar-nav
         li.active
           a(href="#{basePath}/admin/posts") Posts
-        li
-          a(href="#{basePath}/admin/settings") Setting
+        li: a(href="#{basePath}/admin/settings") Setting
+        li: a(href="#{basePath}/admin/users/profile") Profile
+        li: a(href="#{basePath}/") Site Home
         
-        li
-          a(href="#{basePath}/") Site Home
       ul.nav.navbar-nav.navbar-right.navbar-user
         li.dropdown
           a.dropdown-toggle(data-toggle="dropdown") 
