post publish/draft status logic

--- a/src/main/webapp/views/admin/layout/navbar.jade
+++ b/src/main/webapp/views/admin/layout/navbar.jade
@@ -17,15 +17,9 @@ nav.navbar.navbar-fixed-top.navbar-bright
         li: a(href="#{basePath}/") Site Home
         
       ul.nav.navbar-nav.navbar-right.navbar-user
-        li.dropdown
-          a.dropdown-toggle(data-toggle="dropdown") 
-            img(src="#{basePath}/resources/images/user.jpg", style="width:32px;height:32px;")
-            span &nbsp; User
-          ul.dropdown-menu
-            li
-              a(href="javascript:$('#form').submit();")
-                span.glyphicon.glyphicon-log-out(aria-hidden="true") &nbsp;Logout
-            
-              form#form(style="visibility: hidden", method="post", action="#{basePath}/logout")
-                input(type="hidden", name='_csrf', value='#{_csrf.token}')
+        li
+          a(href="javascript:$('#form').submit();") Logout
+        
+          form#form(style="visibility: hidden", method="post", action="#{basePath}/logout")
+            input(type="hidden", name='_csrf', value='#{_csrf.token}')
     
