--- a/src/main/webapp/views/admin/layout/head.jade
+++ b/src/main/webapp/views/admin/layout/head.jade
@@ -12,3 +12,4 @@ link(rel="stylesheet", type='text/css', href="#{basePath}/resources/css/admin/ad
 
 script(src="#{basePath}/webjars/jquery/2.1.4/jquery.min.js")
 script(src="#{basePath}/webjars/bootstrap/3.3.5/js/bootstrap.min.js")
+script(src="#{basePath}/resources/vendors/bootstrap-paginator-1.0.2/js/bootstrap-paginator.min.js")
