Refactor to Spring Boot project

--- a/src/main/resources/templates/admin/layout/head.jade
+++ b/src/main/resources/templates/admin/layout/head.jade
@@ -8,8 +8,8 @@ title #{App.getSiteName()}
 
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
 link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/font-awesome/4.3.0-3/css/font-awesome.min.css')
-link(rel="stylesheet", type='text/css', href="#{basePath}/resources/css/admin/admin.css")
+link(rel="stylesheet", type='text/css', href="#{basePath}/css/admin/admin.css")
 
 script(src="#{basePath}/webjars/jquery/2.1.4/jquery.min.js")
 script(src="#{basePath}/webjars/bootstrap/3.3.5/js/bootstrap.min.js")
-script(src="#{basePath}/resources/vendors/bootstrap-paginator-1.0.2/js/bootstrap-paginator.min.js")
+script(src="#{basePath}/vendors/bootstrap-paginator-1.0.2/js/bootstrap-paginator.min.js")
