--- a/src/main/resources/templates/admin/home/settings.jade
+++ b/src/main/resources/templates/admin/home/settings.jade
@@ -4,7 +4,7 @@ block content
   h1 Settings
   hr
   
-  form.settings-form(method="post",action="#{basePath}/admin/settings")
+  form.settings-form(method="post",action="/admin/settings")
     input(type="hidden", name='_csrf', value='#{_csrf.token}')
     table.table.table-hover.table-bordered.settings
       tbody 
