--- a/src/main/resources/templates/home/index.jade
+++ b/src/main/resources/templates/home/index.jade
@@ -15,13 +15,13 @@ block content
       ul.pager 
         if totalPages > page
           li.previous 
-            a.btn(href="#{basePath}/?page=#{page+1}") 
+            a.btn(href="/?page=#{page+1}")
               span(aria-hidden="true) &larr;
               |  Older posts
               
         if page > 1
           li.next
-            a.btn(href="#{basePath}/?page=#{page-1}") 
+            a.btn(href="/?page=#{page-1}")
               |Newer posts 
               span(aria-hidden="true) &rarr;
         
