--- a/src/main/resources/templates/layout/navbar.jade
+++ b/src/main/resources/templates/layout/navbar.jade
@@ -4,7 +4,7 @@ nav.navbar.navbar-bright
     div#navbar
       ul.nav.navbar-nav
         li.active
-          a(href="#{basePath}/") Home
-        li: a(href="#{basePath}/posts/archive") Archive
-        li: a(href="#{basePath}/about") About
+          a(href="/") Home
+        li: a(href="/posts/archive") Archive
+        li: a(href="/about") About
     
