--- a/src/main/resources/templates/posts/archive.jade
+++ b/src/main/resources/templates/posts/archive.jade
@@ -19,5 +19,5 @@ block content
                 span.month 
                   = viewHelper.getMonthAndDay(post.getCreatedAt())
                 span &nbsp;&nbsp;·&nbsp; 
-                a(href="#{basePath}/posts/#{post.getId()}") #{post.getTitle()}
+                a(href="/posts/#{post.getId()}") #{post.getTitle()}
         
