--- a/src/main/resources/templates/admin/posts/edit.jade
+++ b/src/main/resources/templates/admin/posts/edit.jade
@@ -1,15 +1,15 @@
 extends ../layout/admin
 
 block head
-  script(src="#{basePath}/webjars/ace/1.2.0/src-min/ace.js")
-  script(src="#{basePath}/webjars/ace/1.2.0/src-min/theme-github.js")
-  script(src="#{basePath}/webjars/ace/1.2.0/src-min/mode-markdown.js")
+  script(src="/webjars/ace/1.2.0/src-min/ace.js")
+  script(src="/webjars/ace/1.2.0/src-min/theme-github.js")
+  script(src="/webjars/ace/1.2.0/src-min/mode-markdown.js")
   
 block content
   h1 Edit Post
   hr
 
-  form.post-form(method="post",action="#{basePath}/admin/posts/#{post.getId()}")
+  form.post-form(method="post",action="/admin/posts/#{post.getId()}")
     .item-row
       input(type="hidden", name='_csrf', value='#{_csrf.token}')
     .item-row
