--- a/src/main/resources/templates/layout/head.jade
+++ b/src/main/resources/templates/layout/head.jade
@@ -10,8 +10,8 @@ title
   block title 
     = App.getSiteName()
 
-link(rel='stylesheet', type='text/css', href='#{basePath}/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
-link(rel="stylesheet", type='text/css', href="#{basePath}/vendors/pygments/github.css")
-link(rel="stylesheet", type='text/css', href="#{basePath}/css/theme.css")
+link(rel='stylesheet', type='text/css', href='/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
+link(rel="stylesheet", type='text/css', href="/vendors/pygments/github.css")
+link(rel="stylesheet", type='text/css', href="/css/theme.css")
 
-script(src="#{basePath}/webjars/jquery/2.1.4/jquery.min.js")
+script(src="/webjars/jquery/2.1.4/jquery.min.js")
