--- a/src/main/resources/templates/admin/posts/index.jade
+++ b/src/main/resources/templates/admin/posts/index.jade
@@ -15,6 +15,7 @@ block content
             th Title 
             th Format 
             th Status
+            th Permalink
             th Created At 
             th Updated At 
             th.operations Operations
@@ -26,6 +27,7 @@ block content
               td #{post.getTitle()}
               td #{post.getPostFormat()}
               td #{post.getPostStatus()}
+              td #{post.getPermalink()}
               td #{post.getCreatedAt()}
               td #{post.getUpdatedAt()}
               td.operations 
