--- a/src/main/resources/templates/layout/app.jade
+++ b/src/main/resources/templates/layout/app.jade
@@ -13,4 +13,6 @@ html(lang="en")
       block content
 
     include footer
-    include ../fragments/ga
+    
+    if viewHelper.getApplicationEnv() == "production"
+      include ../fragments/ga
