--- a/src/main/resources/templates/posts/archive.jade
+++ b/src/main/resources/templates/posts/archive.jade
@@ -19,5 +19,6 @@ block content
                 span.month 
                   = viewHelper.getMonthAndDay(post.getCreatedAt())
                 span &nbsp;&nbsp;·&nbsp; 
-                a(href="/posts/#{post.getId()}") #{post.getTitle()}
+                a(href="/posts/#{post.getPermalink() == null ? post.getId() : post.getPermalink()}") 
+                  = post.getTitle()
         
