--- a/src/main/resources/templates/posts/index.jade
+++ b/src/main/resources/templates/posts/index.jade
@@ -5,7 +5,7 @@
         .meta 
           .time #{viewHelper.getFormattedDate(post.getCreatedAt())}
         h2.title 
-          a(href="/posts/#{post.getId()}")
+          a(href="/posts/#{post.getPermalink() == null ? post.getId() : post.getPermalink()}")
             = post.getTitle()
         
         .content 
