--- a/src/main/resources/resources/css/theme.css
+++ b/src/main/resources/resources/css/theme.css
@@ -112,8 +112,16 @@ form input, form button{
 	color: #333;
 }
 
+.post .info{
+	margin-top: 20px;
+	text-align: center;
+	color: #888;
+}
+
 .post .comments{
-	margin-top: 80px;
+	margin-top: 30px;
+	padding-top: 30px;
+	border-top: 1px #eee solid;
 }
 
 .footer{
