--- a/src/main/resources/templates/posts/archive.jade
+++ b/src/main/resources/templates/posts/archive.jade
@@ -12,7 +12,7 @@ block content
     .content
       .year
         h2 2015
-        ul
+        ul.archive-list
           for post in posts 
             if post.getCreatedAt().getYear() == (2015 - 1900)
               li
